# raytracing-kajam

./: Cargo.toml  NOTES.md  README.md  bookmarks.md
pixels/: NOTES.md
pixels/src/: main.rs  main_scene.rs  moving_box.rs
pixels/src/core/: config.rs  draw.rs  game.rs
pong/: Cargo.toml
pong/config/: display.ron
pong/src/: camera.rs  init.rs  main.rs  paddle.rs  state.rs
sdl/: Cargo.toml  env.bat
src/: entity.rs  main.rs  main_scene.rs  map.rs  moving_box.rs  palette.rs  player.rs  point.rs  raycaster.rs  tileset.rs  trigger.rs
src/assets/: door.psd  kajam.act  source.txt
src/core/: assets.rs  colors.rs  config.rs  draw.rs  game.rs  math.rs  mod.rs
