[package]
name = "raytracing-kajam"
version = "0.1.0"
authors = ["Marwane Kalam-Alami <marwane@kalam-alami.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.amethyst]
version = "0.15"
features = ["vulkan"]